tests/fixtures/invalid/e013/reserved_word.spec
behavior behavior "Reserved Word" {
  contract """this uses a reserved keyword as name"""
}
